# better-secureframe-mcp-server

./: .gitignore  LICENSE  PARAMETER_REFERENCE.md  README.md  SECURITY.md  env.example  justfile  lefthook.yml  main.py  mise.toml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
docs/: _config.yml  api-reality-report.md  index.md  mcp-server.md  openapi.yaml
docs/_layouts/: default.html
docs/assets/css/: main.css
src/better_secureframe_mcp/: __init__.py  app.py  client.py  config.py  query.py  schema.py  server.py  shaping.py
src/better_secureframe_mcp/prompts/: __init__.py  workflows.py
src/better_secureframe_mcp/resources/: __init__.py  reference.py
src/better_secureframe_mcp/tools/: __init__.py  _common.py  cloud_resources.py  comments.py  controls.py  devices.py  evidence.py  framework_asset_scopes.py  frameworks.py  integrations.py  knowledge_base.py  misc.py  questionnaires.py  repositories.py  risks.py  tests.py  trust_center.py  user_accounts.py  users.py  vendors.py
tests/: conftest.py  test_config.py  test_pagination.py  test_query.py  test_registration.py  test_shaping.py
